              returns a loguru logger object with options to output to the terminal (default)
              and/or to a log file. The user typically does not interact directly with the 
              'get_logger' function, but through the MyTask object which accepts all 
              necessary inputs.

	            The user can declare a directory for the log files, or even a single log file
              for all output from all SAS tasks called.

+ version.py: At the top level version.py only contains the version information for pySAS.
              For independent tasks they maintain their own version numbers, but for all
              other subdirectories they all point to the master pySAS version file.

	            get_sas_version dedicated function to run 'sasversion' and get SAS version 
              information.

+ */version.py: All version files for individual SAS tasks now only contain their version
                information.

	            Justification: Each individual Python based task should not keep track of 
	            which SAS version it was compiled with 

+ print_version.py: Replaces 'sasver'. SAS version information can now be printed using
                    pysas.print_sas_version()

- sasver    : Subdirectory has been removed. All functionality has been transferred to 
              pysas.print_sas_version()

- write_version.py: write_version.py and */write_version.py files have been removed since 
                    they cannot be used by the end user.

+ obsid     : obsid.py introduced. Replaces odfcontrol.
              Significant changes to pySAS. Three new classes (Parent with two children):
                1. ObsID (Parent class)
                2. ODF (Child class of ObsID)
                3. PPS (Child class of ObsID)

+ parser.py : Update documentation, add logger to ParseArgs

+ param.py  : Update documentation, add logger to paramXmlInfoReader

